hero image not fixed any more, moves when scroller. position:fixed doesn't work as expected on ios safari

--- a/rb/css/tn.less
+++ b/rb/css/tn.less
@@ -1,6 +1,5 @@
 body {
   max-width: 100%;
-  padding-top: 700px;
   transition: 0s linear;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -21,6 +20,8 @@ header {
   url(../img/1.jpg) no-repeat 50% 50%;
   min-height: 700px;
   padding-top: 50px;
+  top: 0;
+  width: 100%;
 }
 
 .mainNav, .mainContainer {
@@ -40,7 +41,7 @@ nav ul a.btn {
   margin-right: 10px;
 }
 
-.mainNavScrolled, header {
+.mainNavScrolled {
   position: fixed;
   top: 0;
   width: 100%;
